chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avocadosh-ingress
spec:
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: copypastot-service
            port:
              number: 1337
      - path: /db
        pathType: Prefix
        backend:
          service:
            name: db-service
            port:
              number: 5432
